[gd_scene load_steps=11 format=2]

[ext_resource path="res://PlayerHolder/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Maps/Lvl5_top_down.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Timer_health.gd" type="Script" id=3]
[ext_resource path="res://EnemeyContainer/Skele_type/Skeleton_Top.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level5.gd" type="Script" id=5]
[ext_resource path="res://Levels/Timer_boss_level.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 513.5, 1622 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1898, 598 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 416, 1633.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2455.5, 373.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 1456.0 ],
"_edit_vertical_guides_": [ 5012.0, 1498.0, -1456.0 ]
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.239216, 0.247059, 0.498039, 1 )
margin_left = -1960.0
margin_top = -1278.0
margin_right = 1915.0
margin_bottom = 2204.0

[node name="Top_zone" parent="." instance=ExtResource( 2 )]
position = Vector2( 137, 127 )
scale = Vector2( 1.86391, 1.86391 )

[node name="on_ground" type="Area2D" parent="Top_zone" groups=["air_group"]]
position = Vector2( -73.5014, -68.1363 )
scale = Vector2( 0.536507, 0.536507 )

[node name="Right" type="CollisionShape2D" parent="Top_zone/on_ground"]
position = Vector2( 2091.5, 301 )
shape = SubResource( 1 )

[node name="Top" type="CollisionShape2D" parent="Top_zone/on_ground"]
position = Vector2( -19, -743 )
shape = SubResource( 2 )

[node name="Left" type="CollisionShape2D" parent="Top_zone/on_ground"]
position = Vector2( -1989, 272.5 )
shape = SubResource( 3 )

[node name="Bottom" type="CollisionShape2D" parent="Top_zone/on_ground"]
position = Vector2( 82.5, 1977.5 )
shape = SubResource( 4 )

[node name="Top_Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 733 )
scale = Vector2( 0.917671, 0.917671 )

[node name="Camera2D3" type="Camera2D" parent="Top_Player"]
position = Vector2( 6.00024, -16.9999 )
zoom = Vector2( 10, 10 )

[node name="Camera2D2" type="Camera2D" parent="Top_Player"]
position = Vector2( 6.00024, -16.9999 )
current = true
zoom = Vector2( 3.5, 3.5 )
limit_left = -1719
limit_top = -839
limit_right = 1719
limit_bottom = 1930

[node name="Skele_Top" parent="." instance=ExtResource( 4 )]
position = Vector2( 481, 40 )
scale = Vector2( 3, 3 )
__meta__ = {
"_edit_vertical_guides_": [ 561.0, -565.0 ]
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( 67, 29 )

[node name="Timer2" type="Timer" parent="."]
autostart = true
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource( 6 )

[connection signal="area_entered" from="Top_zone/on_ground" to="." method="_on_on_ground_area_entered"]
[connection signal="timeout" from="Timer2" to="Timer2" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
